--- a/src/components/ContactList/ContactList.module.css
+++ b/src/components/ContactList/ContactList.module.css
@@ -2,8 +2,8 @@
   list-style: none;
   padding: 0; 
   margin: 0;
-  margin-top: 32px;
   display: flex;
-  flex-direction: column;
   gap: 16px;
+  flex-wrap: wrap;
+  margin-bottom: 40px;
 }
