--- a/src/components/SearchBox/SearchBox.module.css
+++ b/src/components/SearchBox/SearchBox.module.css
@@ -2,6 +2,8 @@
   display: flex;
   flex-direction: column;
   gap: 4px;
+  margin-bottom: 40px;
+
 }
 
 .searchBox input {
@@ -20,5 +22,4 @@
   font-family: Arial, Helvetica, sans-serif;
   font-size: 20px;
   color: black;
-  margin: 0;
 }
