--- a/src/components/ContactForm/ContactForm.module.css
+++ b/src/components/ContactForm/ContactForm.module.css
@@ -40,3 +40,10 @@
   border: 2px solid rgb(131, 131, 131);
   border-radius: 4px;
 }
+
+.contactForm span {
+  font-family: Arial, Helvetica, sans-serif;
+  font-size: 12px;
+  color: red
+}
+
